CoqOfSolidity/test/libsolidity/syntaxTests/errors/error_address_payable.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Error E *)